--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <h1>Депіляційний салон Дарії</h1>
-        <p>Професійна депіляція у  Монастирищі — швидко, делікатно, з турботою про вас</p>
+        <p>Професійна депіляція у Києві — швидко, делікатно, з турботою про вас</p>
     </header>
 
     <section class="about">
         <h2>Про нас</h2>
-        <p>У нашому салоні ми створили простір, де кожна жінка й чоловік можете відчути себе впевненими та доглянутими.
+        <p>У нашому салоні ми створили простір, де кожна жінка може відчути себе впевненою та доглянутою.
         Працюємо виключно зі стерильними матеріалами, використовуємо преміум-косметику та дотримуємось
         усіх стандартів гігієни. Майстер Дарія має понад 3 роки досвіду та завжди знаходить індивідуальний підхід.</p>
     </section>
@@ -31,11 +31,11 @@
 
     <section class="contacts">
         <h2>Контакти</h2>
-        <p>📞 Телефон: +380996264185</p>
-        <p>📍 Локація: Монастирище, Умаський  район</p>
-        <p>📸 Instagram: <a href=https://www.instagram.com/daydreaming.111?igsh</a></p>
+        <p>📞 Телефон: +38 (097) 000 00 00</p>
+        <p>📍 Локація: Київ, Дарницький район</p>
+        <p>📸 Instagram: <a href="https://instagram.com/depil.daria" target="_blank">@depil.daria</a></p>
         <p>🕒 Графік: Пн–Сб 10:00–19:00 (за записом)</p>
-        <a class="button" href=https://www.instagram.com/daydreaming.111?igsh target="_blank">Записатися</a>
+        <a class="button" href="https://instagram.com/depil.daria" target="_blank">Записатися</a>
     </section>
 
     <footer>
