--- a/index.html
+++ b/index.html
@@ -4,42 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Депіляційний салон Дарії</title>
+    <title>MEG-Depilation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Депіляційний салон Дарії</h1>
-        <p>Професійна депіляція у Монастирищі — швидко, делікатно, з турботою про вас</p>
-    </header>
-
+        <header>
+  <h1>MEG-Depilation</h1>
+  <p>✨ Де гладкість — це задоволення, а турбота — стандарт</p>
+  <p>Професійна депіляція у Монастирищі — швидко, делікатно й комфортно 🫶</p>
+</header>
     <section class="about">
         <h2>Про нас</h2>
-        <p>У нашому салоні ми створили простір, де кожна жінка й чоловік може відчути себе впевненими та доглянутими.
-        Працюємо виключно зі стерильними матеріалами, використовуємо преміум-косметику та дотримуємось
-        усіх стандартів гігієни. Майстер Дарія має понад 3 роки досвіду та завжди знаходить індивідуальний підхід.</p>
+        <p>Ваша гладкість — наша турбота 💫
+
+У нас не просто салон — у нас місце, де турбота стає ритуалом.
+Шугаринг, після якого ви відчуєте не тільки гладку шкіру, а й впевненість у собі 💖
+
+
+💥 Майстер Дарія — уважна, акуратна та завжди ставить комфорт клієнта на перше місце. Вона обожнює свою справу, постійно навчається і з відповідальністю підходить до кожної процедури.
+З нею ви відчуєте, що краса — це не біль, а приємна турбота 💕
+✨ Дбайливий підхід до кожного
+💎 Якісна косметика, чистота та комфорт на кожному етапі
+
+Обирай себе. Обирай гладкість. Обирай нас 🧿.</p>
     </section>
 
     <section class="services">
         <h2>Послуги</h2>
         <ul>
-            <li><strong>Шугаринг:</strong> класичний, глибоке бікіні, ноги, руки, пахви.</li>
-            <li><strong>Воскова депіляція:</strong> гарячий і теплий віск для різних зон.</li>
-            <li><strong>Інтимна депіляція:</strong> делікатно, акуратно та в комфортних умовах.</li>
+            <ul>
+  <li><strong>Шугаринг:</strong> класичний — 250 грн ✨, глибоке бікіні — 450 грн 💎, ноги — 400 грн 🌟, руки — 250 грн 💫, пахви — 200 грн 🕊️</li>
+  <li><strong>Воскова депіляція:</strong> гарячий і теплий віск — від 200 до 500 грн 🔥</li>
+  <li><strong>Інтимна депіляція:</strong> делікатно, акуратно та комфортно — від 400 грн 🤍</li>
+</ul>
+<p style="margin-top:10px; font-weight:bold; color:#E94E1B;">Запишись зараз — ідеальна шкіра вже чекає!</p>
         </ul>
     </section>
 
     <section class="contacts">
         <h2>Контакти</h2>
-        <p>📞 Телефон: +38 (097) 000 00 00</p>
-        <p>📍 Локація: Монастирище,Уманський район</p>
+        <p>Телефонуйте нам: <a href="tel:+380996264185">+38 (099) 626 41 85</a></p>
+        <h2>📍 Локація</h2>
+<p>Монастирище, Уманський район</p>
+
+<!-- Вбудована Google карта -->
+<iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2640.4350116399856!2d30.98769801599726!3d48.99163470255973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d2b81305e0b2ff%3A0x36f59ae16523fd03!2z0JzQsNC60YPQv9C40YfQtdC90YHRjNC60LjQuSDQv9GA0L7RgdC40YLQtdGCINCf0L7Qu9C10L3RgtC10YIg0JfQsNC80L7QstC40L3QsA!5e0!3m2!1suk!2sua!4v1722345254365!5m2!1suk!2sua" 
+  width="100%" 
+  height="300" 
+  style="border:0;" 
+  allowfullscreen="" 
+  loading="lazy" 
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
         <p>📸 Instagram: <a href=https://www.instagram.com/daydreaming.111? target="_blank">@daydreaming.111</a></p>
         <p>🕒 Графік: Пн–Сб 10:00–19:00 (за записом)</p>
         <a class="button" href=https://www.instagram.com/daydreaming.111? target="_blank">Записатися</a>
     </section>
 
     <footer>
-        <p>© 2025 Депіляційний салон Дарії. Всі права захищено.</p>
+        <p>© 2025 Салон MEG-Depilation . Всі права захищено.</p>
     </footer>
 </body>
 </html>
